--- a/popup.html
+++ b/popup.html
@@ -133,7 +133,7 @@
 </head>
 
 <body>
-    <h3>Subtitles Assistant</h3>
+    <h3>Close Captioner</h3>
 
     <button id="onlySubtitles">Apenas Legenda</button>
     <button id="start">Legenda + Tradução</button>
