First Translating Version

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
 <body>
     <h3>Close Captioner</h3>
     <button id="onlySubtitles">Add Subtitles</button>
-    <button id="start">Translation</button>
+    <button id="translation">Translation</button>
     <button id="stop">Stop</button>
 
     <div class="config-container">
