Putting a history option (need new design)

--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,10 @@
             <option value="pt-BR">Portuguese (BR)</option>
             <option value="es-ES">Spanish (ES)</option>
         </select>
+        <label>
+            <input type="checkbox" id="toggleHistory"/>
+            Histórico
+        </label>
     </div>
 
     <script src="popup.js"></script>
