--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
 
         <div id="configPanel" class="hidden config-panel">
             <label class="config-option">
-                <span>Idioma:</span>
+                <span>Language:</span>
                 <select id="langSelect">
                     <option value="pt-BR">Portuguese (BR)</option>
                     <option value="en-US">English (US)</option>
@@ -31,7 +31,7 @@
 
             <label class="config-option checkbox-label">
                 <input type="checkbox" id="toggleHistory" />
-                <span>Ativar histórico</span>
+                <span>Enable History</span>
             </label>
         </div>
     </div>
